make sure the footer doesn't get overlapped by the sidebar
git-svn-id: http://svn.php.net/repository/pear/pearweb/trunk@249351 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -236,6 +236,7 @@ li.side_page {
 /* ========= Footer ========= */
 div#footer {
     margin-top: 2em;
+    clear: both;
 }
 
 div#foot-bar {
